# FLTest

./: .dockerignore  .gitignore  Dockerfile  README.md  USAGE.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: ARCHITECTURE.md  attacks.md  cli.md  concepts.md  configuration.md  datasets.md  defenses.md  differential-testing.md  extending.md  fuzzing.md  index.md  installation.md  metamorphic-testing.md  metrics.md  pitfalls.md  quickstart.md  walkthrough.md  worked-example.md
examples/configs/: attack_label_flip.yaml  datasets_showcase.yaml  defense_robust.yaml  differential.yaml  differential_3way.yaml  dlg.yaml  exhaustive_eval.yaml  fuzz_demo.yaml  metamorphic.yaml  pitfalls_demo.yaml
examples/hooks/: atk_backdoor.py  atk_dlg.py  backdoor_viz.py  def_gradient_noise.py  def_krum.py  def_robust_median.py
fl_testing/frameworks/: models.py  utils.py
fltest/: __init__.py  cli.py  main.py
fltest/attacks/: __init__.py  base.py  data_poison_backdoor.py  dlg.py  gaussian.py  label_flip.py  sign_flip.py
fltest/core/: config.py  hook_context.py  orchestrator.py  plugin.py  registry.py  wiring.py
fltest/defenses/: __init__.py  _robust.py  base.py  gradient_noise.py  krum.py  median.py  norm_clip.py  trimmed_mean.py
fltest/frameworks/: __init__.py  base.py
fltest/metrics/: __init__.py  base.py  listeners.py
fltest/pitfalls/: __init__.py  checker.py  recommender.py
fltest/testing/: __init__.py  report.py  (+3 more)
tests/: test_attacks_defenses.py  test_integration_smoke.py  test_registry_and_fuzzer.py  test_rules_and_pitfalls.py
(+13 files in other folders)
