[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fltest"
version = "0.2.0"
description = "FLTest: a testbed for evaluating privacy and robustness of Privacy-Preserving Federated Learning (PPFL)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "FLTest Team" }]

# Core dependencies. Torch/torchvision use default PyPI wheels so they resolve to
# CPU/MPS builds on macOS arm64 and CPU/CUDA on Linux (no hard-coded +cu118 pin).
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "flwr[simulation]==1.11.1",
    "flwr-datasets[vision]==0.3.0",
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3",
    "diskcache>=5.6",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
# Heavy backends kept optional so the lightweight core (reference + flower) always installs cleanly.
nvflare = ["nvflare>=2.6,<2.9", "tensorboard>=2.16"]
dev = ["pytest>=8.0", "pytest-html>=4.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.scripts]
fltest = "fltest.cli:main"

[tool.setuptools.packages.find]
include = ["fltest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
